fixed earlier alignment issues

--- a/ColorCode/frontend/static/css/index.css
+++ b/ColorCode/frontend/static/css/index.css
@@ -22,7 +22,6 @@ body {
 #prefs {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  min-width: 75%;
   margin: auto;
   text-align: center;
 }
@@ -38,6 +37,7 @@ text-align: left;
 #prefs td {
 border: 0px;
 padding: 2px;
+
 }
 
 /*******************/
